// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProductGroupCard should render checked 1`] = `
<DocumentFragment>
  <div
    class="card"
    id="product-group-0"
  >
    <div
      class="card__body"
    >
      <div
        class="govuk-radios"
      >
        <div
          class="govuk-radios__item card__selector"
        >
          <input
            checked=""
            class="govuk-radios__input"
            id="product-group-0-radio"
            name="productGroupId"
            type="radio"
            value="1"
          />
          <label
            class="govuk-label govuk-radios__label"
            for="product-group-0-radio"
          >
            <span
              class="govuk-visually-hidden"
            >
              product-group-0
            </span>
          </label>
        </div>
      </div>
      <h4
        class="govuk-heading-m govuk-!-padding-bottom-4"
      >
        The capped products
      </h4>
      <p
        class="govuk-body-s govuk-!-margin-bottom-2"
      >
        4 products
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProductGroupCard should render not checked 1`] = `
<DocumentFragment>
  <div
    class="card"
    id="product-group-0"
  >
    <div
      class="card__body"
    >
      <div
        class="govuk-radios"
      >
        <div
          class="govuk-radios__item card__selector"
        >
          <input
            class="govuk-radios__input"
            id="product-group-0-radio"
            name="productGroupId"
            type="radio"
            value="1"
          />
          <label
            class="govuk-label govuk-radios__label"
            for="product-group-0-radio"
          >
            <span
              class="govuk-visually-hidden"
            >
              product-group-0
            </span>
          </label>
        </div>
      </div>
      <h4
        class="govuk-heading-m govuk-!-padding-bottom-4"
      >
        The capped products
      </h4>
      <p
        class="govuk-body-s govuk-!-margin-bottom-2"
      >
        4 products
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProductGroupCard should render with delete handler 1`] = `
<DocumentFragment>
  <div
    class="card"
    id="product-group-0"
  >
    <div
      class="card__body"
    >
      <div
        class="card__actions"
      >
        <ul
          class="actions__list"
        >
          <li
            class="actions__item"
          >
            <a
              class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
              href="/manageProductGroup?id=1"
            >
              Edit
            </a>
          </li>
          <li
            class="actions__item"
          >
            <button
              class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular actions__delete"
            >
              Delete
            </button>
          </li>
        </ul>
      </div>
      <h4
        class="govuk-heading-m govuk-!-padding-bottom-4"
      >
        The capped products
      </h4>
      <p
        class="govuk-body-s govuk-!-margin-bottom-2"
      >
        4 products
      </p>
    </div>
  </div>
</DocumentFragment>
`;
